# kway

./: Cargo.toml  LICENSE  readme.md
assets/: layout.yml  mouse-layer.yml  style.css
src/: app.rs  autocorrect.rs  keyboard.rs  layout.rs  main.rs  pointer.rs  session.rs
src/kbd/: glyphs.rs  keymap.rs  layout.rs  mod.rs  session.rs
src/ptr/: mod.rs
src/ui/: glyphs.rs  key.rs  keyboard.rs  mod.rs  swipe.rs
