[package]
name = "vkbd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
evdev = { version = "0.12.2", features = ["serde"] }
gdk4 = "0.9.5"
gtk4-layer-shell = "0.4.0"
mouse-keyboard-input = "0.9.1"
relm4 = "0.9.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
skyspell_core = "4.0.1"
tempfile = "3.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wayland-client = "0.31.7"
wayland-protocols-misc = { version = "0.3.5", features = ["client", "wayland-client"] }
xkbcommon = "0.8.0"
