[package]
name = "kway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arc-swap = "1.7.1"
bpaf = { version = "0.9.19", features = ["derive"] }
evdev = { version = "0.12.2", features = ["serde"] }
fs-err = "3.1.0"
gdk4 = "0.9.6"
gtk4-layer-shell = "0.4.0"
mouse-keyboard-input = "0.9.1"
relm4 = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.19.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wayland-client = "0.31.8"
wayland-protocols-misc = { version = "0.3.6", features = ["client", "wayland-client"] }
xkbcommon = "0.8.0"
